<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#7a201308"
    >


    <Button
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:text="@string/five"
        android:id="@+id/five"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:text="@string/four"
        android:id="@+id/four"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textView3"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:text="@string/six"
        android:id="@+id/six"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView4"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="110dip"
        android:text="@string/two"
        android:id="@+id/two"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="110dip"
        android:text="@string/three"
        android:id="@+id/three"
        android:layout_alignBottom="@+id/two"
        android:layout_alignStart="@+id/six"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="110dip"
        android:text="@string/one"
        android:id="@+id/one"
        android:layout_alignBottom="@+id/two"
        android:layout_alignEnd="@+id/four"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="110dip"
        android:text="@string/nine"
        android:id="@+id/nine"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/six"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="110dip"
        android:text="@string/eight"
        android:id="@+id/eight"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <Button
        android:layout_width="100dip"
        android:layout_height="110dip"
        android:text="@string/seven"
        android:id="@+id/seven"
        android:layout_alignTop="@+id/eight"
        android:layout_alignEnd="@+id/four"
        android:background="@android:color/transparent"
        android:textSize="80sp"
        />

    <TextView
        android:layout_width="330dip"
        android:layout_height="10dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bar1"
        android:id="@+id/textView"
        android:layout_above="@+id/five"
        android:layout_centerHorizontal="true"
        android:background="#dd2c2306"
        android:textColorHighlight="#000000"
        />

    <TextView
        android:layout_width="330dip"
        android:layout_height="10dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bar2"
        android:id="@+id/textView2"
        android:layout_below="@+id/five"
        android:layout_centerHorizontal="true"
        android:background="#dd2c2306"
        android:textColorHighlight="#000000"
        />

    <TextView
        android:layout_width="10dip"
        android:layout_height="340dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bar4"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/five"
        android:background="#dd2c2306"
        android:textColorHighlight="#000000"
        />

    <TextView
        android:layout_width="10dip"
        android:layout_height="340dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bar3"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/five"
        android:background="#dd2c2306"
        android:textColorHighlight="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/topDisplay"
        android:id="@+id/topDisplay"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:textColor="#1f10ff"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bottomDisplay"
        android:id="@+id/bottomDisplay"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:textColor="#1f10ff"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/won_message"
        android:id="@+id/wonText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="55sp"
        android:textColor="#e53010"
        />

</RelativeLayout>
